--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,16 @@ body {
   
 }
 
+
+/* Add this to your global styles or component styles */
+.skeleton {
+  background-color: #e0e0e0; /* Light gray color */
+  border-radius: 0.5rem; /* Rounded corners */
+}
+
+
+
+
 @layer base {
   :root {
     --background: 0 0% 100%;
