--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,7 +28,7 @@ body {
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
 
-    --primary: 311 65% 39%;
+    --primary: 222.2 47.4% 11.2%;
     --primary-foreground: 210 40% 98%;
 
     --secondary: 210 40% 96.1%;
@@ -48,6 +48,16 @@ body {
     --ring: 222.2 84% 4.9%;
 
     --radius: 0.5rem;
+
+    --chart-1: 12 76% 61%;
+
+    --chart-2: 173 58% 39%;
+
+    --chart-3: 197 37% 24%;
+
+    --chart-4: 43 74% 66%;
+
+    --chart-5: 27 87% 67%;
   }
 
   .dark {
@@ -78,8 +88,19 @@ body {
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
+    --chart-1: 220 70% 50%;
+    --chart-2: 160 60% 45%;
+    --chart-3: 30 80% 55%;
+    --chart-4: 280 65% 60%;
+    --chart-5: 340 75% 55%;
   }
 }
+
+
+.truncated-title {
+  max-width: 150px; /* Adjust this value as needed */
+}
+
 
 @layer base {
   body {
@@ -123,4 +144,19 @@ body {
     --primary-foreground: 210 40% 98%;
     /* other variables */
   }
+  
+
+
+
+@layer base {
+  * {
+    @apply border-border;
+  
+  }
+  body {
+    @apply bg-background text-foreground;
+  
+  }
+  
+}
   
